More HTML Versions

--- a/public/html/forum_entry.html
+++ b/public/html/forum_entry.html
@@ -45,15 +45,15 @@
 <div class="mx-5">
     <h1>New Forum Post</h1>
     <form class="mx-2">
-        <div>
+        <div >
             <label for="title" class="form-label">Post Title</label>
-            <input type="text" class="form-control" id="title">
+            <input type="text" class="form-control" id="title" placeholder="Forum Post Title">
         </div>
         <div>
             <div class="row">
                 <div class="col-10">
                     <label for="url" class="form-label">Post Title</label>
-                    <input type="text" class="form-control" id="url">
+                    <input type="text" class="form-control" id="url" placeholder="URL of Video/Picture">
                 </div>
                 <div class="col-2">
                     <br>
@@ -61,13 +61,13 @@
                 </div>
                 <div>
                     <label for="postdetail" class="forum-label">Post Description</label>
-                    <textarea type="text" class="form-control" rows="8" id="postdetail">
+                    <textarea type="text" class="form-control" rows="8" id="postdetail" placeholder="Detail">
 
                     </textarea>
                 </div>
                 <div>
                     <label for="tags" class="form-label">Tags</label>
-                    <input type="text" class="form-control" id="tags">
+                    <input type="text" class="form-control" id="tags" placeholder="#tags">
                 </div>
                 <div class="container my-2">
                     <div class="row justify-content-between">
