--- a/public/html/index.html
+++ b/public/html/index.html
@@ -27,7 +27,7 @@
 
 <!--    <script src="js/index.js" defer></script>-->
 
-    <style rel="stylesheet" src="index.css"></style>
+    <link rel="stylesheet" src="index.css">
 
 
 </head>
