--- a/SPOC-Direct/public/html/forum_edit.html
+++ b/SPOC-Direct/public/html/forum_edit.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Forum Post</title>
-
+    <script src="../js/edit.js" defer></script>
 
     <!--    Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -78,16 +78,16 @@
 
 <div class="mx-5">
     <h1>New Forum Post</h1>
-    <form class="mx-2">
+    <form class="mx-2" action="/forum_edit" method="post">
         <div >
             <label for="title" class="form-label">Post Title</label>
-            <input type="text" class="form-control" id="title" placeholder="Forum Post Title">
+            <input type="text" class="form-control" name="title" id="title" placeholder="Forum Post Title" required>
         </div>
         <div>
             <div class="row">
                 <div class="col-10">
-                    <label for="url" class="form-label">Post Title</label>
-                    <input type="text" class="form-control" id="url" placeholder="URL of Video/Picture">
+                    <label for="url" class="form-label">Image or Video</label>
+                    <input type="text" class="form-control" name="url" id="url" placeholder="URL of Video/Picture">
                 </div>
                 <div class="col-2">
                     <br>
@@ -95,21 +95,19 @@
                 </div>
                 <div>
                     <label for="postdetail" class="forum-label">Post Description</label>
-                    <textarea type="text" class="form-control" rows="8" id="postdetail" placeholder="Detail">
-
-                    </textarea>
+                    <textarea type="text" class="form-control" name="postdetail" rows="8" id="postdetail" placeholder="Detail" required></textarea>
                 </div>
                 <div>
                     <label for="tags" class="form-label">Tags</label>
-                    <input type="text" class="form-control" id="tags" placeholder="#tags">
+                    <input type="text" class="form-control"  name="tags" id="tags" placeholder="#tags" required>
                 </div>
                 <div class="container my-2">
                     <div class="row justify-content-between">
                         <div class="col-3">
-                            <button class="btn btn-primary">Submit</button>
+                            <button type="submit" class="btn btn-primary">Submit</button>
                         </div>
                         <div class="col-3">
-                            <button class="btn btn-danger">Cancel</button>
+                            <button class="btn btn-danger" onclick="OnCancel()">Cancel</button>
                         </div>
                     </div>
                 </div>
