--- a/SPOC-Direct/public/html/index.html
+++ b/SPOC-Direct/public/html/index.html
@@ -417,9 +417,9 @@
                     <div class="row">
                         <div class="col-md-6">
                             <ul>
-                                <li><a href="#"><i class="fa fa-stop"></i>Register</a></li>
-                                <li><a href="#"><i class="fa fa-stop"></i>Login</a></li>
-                                <li><a href="#"><i class="fa fa-stop"></i>My Profile</a></li>
+                                <li><a href="/register"><i class="fa fa-stop"></i>Register</a></li>
+                                <li><a href="/login"><i class="fa fa-stop"></i>Login</a></li>
+                                <li><a href="/profile"><i class="fa fa-stop"></i>My Profile</a></li>
                             </ul>
                         </div>
                         <div class="col-md-6">
