--- a/SPOC-Direct/public/html/post_detail.html
+++ b/SPOC-Direct/public/html/post_detail.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title>Register New Account</title>
+    <title>Title</title>
 
-
+    <script src="../js/post_detail.js" defer></script>
 
     <!--    Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -23,8 +23,8 @@
     <script src="https://kit.fontawesome.com/e5b5eed843.js" crossorigin="anonymous"></script>
 
 
-<!--    <link rel="stylesheet" href="../register/css/hero-slider.css">-->
-<!--    <link rel="stylesheet" href="../register/css/owl-carousel.css">-->
+    <!--    <link rel="stylesheet" href="../register/css/hero-slider.css">-->
+    <!--    <link rel="stylesheet" href="../register/css/owl-carousel.css">-->
 
 
     <!-- Unfortunately needed for the Navbar to work...   -->
@@ -60,7 +60,7 @@
                             <li><a href="#">User</a>
                                 <!--   Change 'User' to username when logged in -->
                                 <ul class="sub-menu">
-                                    <li><a class="active" href="/login">Log In</a></li>
+                                    <li><a href="/login">Log In</a></li>
                                     <li><a href="/register">Register</a></li>
                                     <!-- Only visible Log out and Account when logged in-->
                                     <li><a href="#">My Account</a></li>
@@ -75,28 +75,51 @@
     </header>
 </div>
 
-<div class="mb-3 container">
-    <form class="m-2 d-flex justify-content-center">
-        <div class="card col-6">
-            <h3 class="mx-2">Log In</h3>
-            <div class="col-10 mt-3 mx-2">
-                <label for="username" class="form-label">Username:</label>
-                <input type="text" class="form-control" id="username" placeholder="username">
-            </div>
-            <div class="col-10 mb-4 mx-2">
-                <label for="password" class="form-label">Password:</label>
-                <input type="password" class="form-control" id="password" placeholder="password">
-            </div>
-            <div class="row mx-1">
-                <div class="d-flex justify-content-between mb-2">
-                    <button class="btn btn-primary">Log in</button>
-                    <button class="btn btn-outline-primary" onclick="window.location.href='/register'">Register New Account</button>
+
+<section id="post_info">
+    <div class="col-md-9 col-lg-8 mx-auto">
+        <div class="card">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-xl-10 col-lg-12">
+                        <h1 id="title">Title</h1>
+                    </div>
+                    <div class="col-xl-2 col-lg-12">
+                        <!--  Make sure group isnt visible if not original poster or admin-->
+                        <div class="btn-group">
+                            <button onclick="onEdit()" class="btn btn-primary">Edit</button>
+                            <button onclick="onDelete()" class="btn btn-danger">Delete</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-3">
+                        <img id="url" src="#" onerror="this.src='../img/default.png'" style="max-height: 200px">
+                    </div>
+                    <div class="col-lg-9">
+                        <div class="row">
+                            <h5 class="col-6">User: <span id="username"></span></h5>
+                            <h5 class="col-6">Tags:<span id="tags"></span></h5>
+                        </div>
+                        <p id="postdetail"> this is where the detail comes in</p>
+                    </div>
+
                 </div>
             </div>
+            <div class="col-2 mx-3 mb-3">
+                <button class="btn btn-info" onclick="onReply()">Reply</button>
+            </div>
         </div>
-    </form>
-</div>
+    </div>
+</section>
 
+<section id="replies">
+    <div class="col-8 mx-auto">
+        <ul id="reply_list" class="list-group">
+
+        </ul>
+    </div>
+</section>
 
 </body>
 </html>
