--- a/SPOC-Direct/public/html/reply.html
+++ b/SPOC-Direct/public/html/reply.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Register New Account</title>
+    <title>Reply to Post</title>
 
 
+    <script src="../js/reply.js" defer></script>
 
     <!--    Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -23,8 +24,8 @@
     <script src="https://kit.fontawesome.com/e5b5eed843.js" crossorigin="anonymous"></script>
 
 
-<!--    <link rel="stylesheet" href="../register/css/hero-slider.css">-->
-<!--    <link rel="stylesheet" href="../register/css/owl-carousel.css">-->
+    <!--    <link rel="stylesheet" href="../register/css/hero-slider.css">-->
+    <!--    <link rel="stylesheet" href="../register/css/owl-carousel.css">-->
 
 
     <!-- Unfortunately needed for the Navbar to work...   -->
@@ -40,6 +41,7 @@
 
 </head>
 <body>
+
 <div class="wrap" id="navtop">
     <header id="header">
         <div class="container">
@@ -60,7 +62,7 @@
                             <li><a href="#">User</a>
                                 <!--   Change 'User' to username when logged in -->
                                 <ul class="sub-menu">
-                                    <li><a class="active" href="/login">Log In</a></li>
+                                    <li><a href="/login">Log In</a></li>
                                     <li><a href="/register">Register</a></li>
                                     <!-- Only visible Log out and Account when logged in-->
                                     <li><a href="#">My Account</a></li>
@@ -75,26 +77,28 @@
     </header>
 </div>
 
-<div class="mb-3 container">
-    <form class="m-2 d-flex justify-content-center">
-        <div class="card col-6">
-            <h3 class="mx-2">Log In</h3>
-            <div class="col-10 mt-3 mx-2">
-                <label for="username" class="form-label">Username:</label>
-                <input type="text" class="form-control" id="username" placeholder="username">
-            </div>
-            <div class="col-10 mb-4 mx-2">
-                <label for="password" class="form-label">Password:</label>
-                <input type="password" class="form-control" id="password" placeholder="password">
-            </div>
-            <div class="row mx-1">
-                <div class="d-flex justify-content-between mb-2">
-                    <button class="btn btn-primary">Log in</button>
-                    <button class="btn btn-outline-primary" onclick="window.location.href='/register'">Register New Account</button>
+<div class="mx-5">
+    <h1>Reply to Post:</h1>
+    <form class="mx-2" action="/reply" method="post">
+        <div>
+            <div class="row">
+                <div class="col-8">
+                    <div>
+                        <label for="replyText" class="forum-label">Reply:</label>
+                        <textarea type="text" class="form-control mb-3" name="replyText" rows="8" id="replyText"
+                                  placeholder="Your reply here" required></textarea>
+                    </div>
+                    <div class="row">
+                        <div class="btn-group col-4">
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                            <button class="btn btn-danger" onclick="OnCancel()">Cancel</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </form>
+
 </div>
 
 
