This adds time of posts and replies and other fixs
Also realized reply.js was not present in last push meaning replies wouldnt work if downloaded

--- a/SPOC-Direct/public/html/forum_edit.html
+++ b/SPOC-Direct/public/html/forum_edit.html
@@ -98,7 +98,7 @@
                     <textarea type="text" class="form-control" name="postdetail" rows="8" id="postdetail" placeholder="Detail" required></textarea>
                 </div>
                 <div>
-                    <label for="tags" class="form-label">Tags</label>
+                    <label for="tags" class="form-label">Tags - Please seperate with commas</label>
                     <input type="text" class="form-control"  name="tags" id="tags" placeholder="#tags" required>
                 </div>
                 <div class="container my-2">
