--- a/SPOC-Direct/public/html/post_detail.html
+++ b/SPOC-Direct/public/html/post_detail.html
@@ -81,9 +81,6 @@
         <div class="card">
             <div class="card-body">
                 <div class="row">
-                    <div class="col-xl-10 col-lg-12">
-                        <h1 id="title">Title</h1>
-                    </div>
                     <div class="col-xl-2 col-lg-12">
                         <!--  Make sure group isnt visible if not original poster or admin-->
                         <div class="btn-group">
@@ -91,6 +88,13 @@
                             <button onclick="onDelete()" class="btn btn-danger">Delete</button>
                         </div>
                     </div>
+                    <div class="col-xl-10 col-lg-12">
+                        <h1 id="title">Title</h1>
+                    </div>
+                    <div>
+                        <p id="date">time and date</p>
+                    </div>
+
                 </div>
                 <div class="row">
                     <div class="col-lg-3">
