--- a/SPOC-Direct/public/html/election.html
+++ b/SPOC-Direct/public/html/election.html
@@ -2,10 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Reply to Post</title>
+    <title>Spoc Election Home</title>
 
-
-    <script src="../js/reply.js" defer></script>
 
     <!--    Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -24,8 +22,8 @@
     <script src="https://kit.fontawesome.com/e5b5eed843.js" crossorigin="anonymous"></script>
 
 
-<!--        <link rel="stylesheet" href="../css/hero-slider.css">-->
-<!--        <link rel="stylesheet" href="../css/owl-carousel.css">-->
+    <!--        <link rel="stylesheet" href="../css/hero-slider.css">-->
+    <!--        <link rel="stylesheet" href="../css/owl-carousel.css">-->
 
 
     <!-- Unfortunately needed for the Navbar to work...   -->
@@ -37,7 +35,6 @@
     <script src="../js/datepicker.js" defer></script>
     <script src="../js/plugins.js" defer></script>
     <script src="../js/main.js" defer></script>
-
 
 </head>
 <body>
@@ -77,29 +74,38 @@
     </header>
 </div>
 
-<div class="mx-5">
-    <h1>Reply to Post:</h1>
-    <form class="mx-2" action="/reply" method="post">
-        <div>
-            <div class="row">
-                <div class="col-8">
-                    <div>
-                        <label for="replyText" class="forum-label">Reply:</label>
-                        <textarea type="text" class="form-control mb-3" name="replyText" rows="8" id="replyText"
-                                  placeholder="Your reply here" required></textarea>
-                    </div>
-                    <div class="row">
-                        <div class="btn-group col-4">
-                            <button type="submit" class="btn btn-primary">Submit</button>
-                            <button class="btn btn-danger" onclick="OnCancel()">Cancel</button>
-                        </div>
-                    </div>
+
+<!--<iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%236bb0e4&ctz=America%2FNew_York&showPrint=0&mode=MONTH&showTz=0&showCalendars=0&showTabs=0&showNav=1&src=N2VuZzRvY2gwYmFvYTFvam9kbnFqNWU4cThAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&color=%23EF6C00" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>-->
+
+
+<section id="elect_info">
+    <h1>SPOC Election Home Page</h1>
+    <div class="row">
+        <div class="col-sm-12 col-md-8">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="card-link">Card link</a>
+                    <a href="#" class="card-link">Another link</a>
                 </div>
             </div>
         </div>
-    </form>
+        <div class="col-sm-12 col-md-4">
+            <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="card-link">Card link</a>
+                <a href="#" class="card-link">Another link</a>
+            </div>
+        </div>
+        </div>
+    </div>
 
-</div>
+</section>
 
 
 <footer class="footer mt-5">
@@ -142,7 +148,8 @@
                     <div class="footer-heading">
                         <h4>Contact Information</h4>
                     </div>
-                    <p>Send us an email or come to our office for more information about anything related to the club and
+                    <p>Send us an email or come to our office for more information about anything related to the club
+                        and
                         this website!</p>
                     <ul>
                         <li><span>Email:</span><a href="#">clarkuspoc@gmail.com</a></li>
