--- a/SPOC-Direct/public/html/index.html
+++ b/SPOC-Direct/public/html/index.html
@@ -388,7 +388,7 @@
 </section>
 
 
-<footer>
+<footer class="footer mt-5">
     <div class="container">
         <div class="row">
             <div class="col-md-5">
@@ -398,15 +398,6 @@
                     </div>
                     <p>Science-Fiction People of Clark is a student run club at Clark Univeristy which appeals to all
                         interested</p>
-                    <ul class="social-icons">
-                        <li>
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-linkedin"></i></a>
-                            <a href="#"><i class="fa fa-rss"></i></a>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
-                        </li>
-                    </ul>
                 </div>
             </div>
             <div class="col-md-4">
@@ -424,9 +415,9 @@
                         </div>
                         <div class="col-md-6">
                             <ul>
-                                <li><a href="#"><i class="fa fa-stop"></i>Forum</a></li>
+                                <li><a href="/forum"><i class="fa fa-stop"></i>Forum</a></li>
                                 <li><a href="#"><i class="fa fa-stop"></i>Events</a></li>
-                                <li><a href="#"><i class="fa fa-stop"></i>About Us</a></li>
+                                <li><a href="/"><i class="fa fa-stop"></i>About Us</a></li>
                             </ul>
                         </div>
                     </div>
