--- a/SPOC-Direct/public/html/index.html
+++ b/SPOC-Direct/public/html/index.html
@@ -62,6 +62,7 @@
                             <li class='active'><a href="/">Home</a></li>
                             <li><a class="scrollTo" data-scrollTo="blog" href="#">Events</a></li>
                             <li><a href="/forum">Forum</a></li>
+<li><a href="/election">Election</a></li>
                             <li><a class="scrollTo" data-scrollTo="about" href="#">About Us</a></li>
                             <li><a href="#">User</a>
                                 <!--   Change 'User' to username when logged in -->
@@ -408,16 +409,16 @@
                     <div class="row">
                         <div class="col-md-6">
                             <ul>
-                                <li><a href="/register"><i class="fa fa-stop"></i>Register</a></li>
-                                <li><a href="/login"><i class="fa fa-stop"></i>Login</a></li>
-                                <li><a href="/profile"><i class="fa fa-stop"></i>My Profile</a></li>
+                                <li><a href="/register"><i class="fa fa-angle-right"></i>Register</a></li>
+                                <li><a href="/login"><i class="fa fa-angle-right"></i>Login</a></li>
+                                <li><a href="/profile"><i class="fa fa-angle-right"></i>My Profile</a></li>
                             </ul>
                         </div>
                         <div class="col-md-6">
                             <ul>
-                                <li><a href="/forum"><i class="fa fa-stop"></i>Forum</a></li>
-                                <li><a href="#"><i class="fa fa-stop"></i>Events</a></li>
-                                <li><a href="/"><i class="fa fa-stop"></i>About Us</a></li>
+                                <li><a href="/forum"><i class="fa fa-angle-right"></i>Forum</a></li>
+                                <li><a href="#"><i class="fa fa-angle-right"></i>Events</a></li>
+                                <li><a href="/"><i class="fa fa-angle-right"></i>About Us</a></li>
                             </ul>
                         </div>
                     </div>
