--- a/SPOC-Direct/public/html/election_vote.html
+++ b/SPOC-Direct/public/html/election_vote.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Register New Account</title>
-
+    <title>Vote</title>
 
 
     <!--    Bootstrap-->
@@ -23,8 +22,8 @@
     <script src="https://kit.fontawesome.com/e5b5eed843.js" crossorigin="anonymous"></script>
 
 
-<!--    <link rel="stylesheet" href="../css/hero-slider.css">-->
-<!--    <link rel="stylesheet" href="../css/owl-carousel.css">-->
+    <!--        <link rel="stylesheet" href="../css/hero-slider.css">-->
+    <!--        <link rel="stylesheet" href="../css/owl-carousel.css">-->
 
 
     <!-- Unfortunately needed for the Navbar to work...   -->
@@ -37,9 +36,9 @@
     <script src="../js/plugins.js" defer></script>
     <script src="../js/main.js" defer></script>
 
-
 </head>
 <body>
+
 <div class="wrap" id="navtop">
     <header id="header">
         <div class="container">
@@ -56,12 +55,12 @@
                             <li><a href="/">Home</a></li>
                             <li><a href="#">Events</a></li>
                             <li><a href="/forum">Forum</a></li>
-<li><a href="/election">Election</a></li>
+                            <li><a href="/election">Election</a></li>
 
                             <li><a href="#">User</a>
                                 <!--   Change 'User' to username when logged in -->
                                 <ul class="sub-menu">
-                                    <li><a class="active" href="/login">Log In</a></li>
+                                    <li><a href="/login">Log In</a></li>
                                     <li><a href="/register">Register</a></li>
                                     <!-- Only visible Log out and Account when logged in-->
                                     <li><a href="#">My Account</a></li>
@@ -76,30 +75,79 @@
     </header>
 </div>
 
-<div class="mb-3 container">
-    <form class="m-2 d-flex justify-content-center">
-        <div class="card col-6">
-            <h3 class="mx-2">Log In</h3>
-            <div class="col-10 mt-3 mx-2">
-                <label for="username" class="form-label">Username:</label>
-                <input type="text" class="form-control" id="username" placeholder="username">
-            </div>
-            <div class="col-10 mb-4 mx-2">
-                <label for="password" class="form-label">Password:</label>
-                <input type="password" class="form-control" id="password" placeholder="password">
-            </div>
-            <div class="row mx-1">
-                <div class="d-flex justify-content-between mb-2">
-                    <button class="btn btn-primary">Log in</button>
-                    <button class="btn btn-outline-primary" onclick="window.location.href='/register'">Register New Account</button>
-                </div>
+<section>
+    <div class="container m-auto">
+        <div class="card">
+            <div class="card-body">
+                <h2>Vote for Candidates:</h2>
+                <form>
+                    <hr>
+                    <div class="my-3">
+                        <h5>President <i class="fa fa-user-tie"></i></h5>
+                        <p>The President leads the club and helps organize future events and makes the final
+                            decision</p>
+                    </div>
+                    <input list="pres" class="form-control" placeholder="Select Candidate">
+                    <datalist id="pres">
+                        <option value="Candidate 1"></option>
+                        <option value="Candidate 2"></option>
+                        <option value="Candidate 3"></option>
+                        <option value="Candidate 4"></option>
+                        <option value="Candidate 5"></option>
+                    </datalist>
+                    <hr>
+                    <div class="my-3">
+                        <h5>Vice President <i class="fa fa-user-tie"></i></h5>
+                        <p>Advises the president and has authority to plan events and manage the club</p>
+                    </div>
+                    <input list="vice" class="form-control" placeholder="Select Candidate">
+                    <datalist id="vice">
+                        <option value="Candidate 1"></option>
+                        <option value="Candidate 2"></option>
+                        <option value="Candidate 3"></option>
+                        <option value="Candidate 4"></option>
+                        <option value="Candidate 5"></option>
+                    </datalist>
+                    <hr>
+                    <div class="my-3">
+                        <h5>Secretary <i class="fa fa-scroll"></i></h5>
+                        <p>In charge of the keeping of documentation on the club such as keeping the list of
+                            members upto date</p>
+                    </div>
+                    <input list="secr" class="form-control" placeholder="Select Candidate">
+                    <datalist id="secr">
+                        <option value="Candidate 1"></option>
+                        <option value="Candidate 2"></option>
+                        <option value="Candidate 3"></option>
+                        <option value="Candidate 4"></option>
+                        <option value="Candidate 5"></option>
+                    </datalist>
+                    <hr>
+                    <div class="my-3">
+                        <h5>Treasurer <i class="fa fa-money-bill"></i></h5>
+                        <p>Keeps track and plans or secures the funds needed for the running of the club and
+                            events</p>
+                    </div>
+                    <input list="tres" class="form-control" placeholder="Select Candidate">
+                    <datalist id="tres">
+                        <option value="Candidate 1"></option>
+                        <option value="Candidate 2"></option>
+                        <option value="Candidate 3"></option>
+                        <option value="Candidate 4"></option>
+                        <option value="Candidate 5"></option>
+                    </datalist>
+                    <div class="row mt-2 justify-content-around">
+                        <button class="btn btn-outline-info col-4" type="submit">Submit</button>
+                        <button class="btn btn-danger col-4" type="button">Cancel</button>
+
+                    </div>
+                </form>
             </div>
         </div>
-    </form>
-</div>
+    </div>
+</section>
 
-
-<footer class="footer">
+<footer class="footer mt-5">
     <div class="container">
         <div class="row">
             <div class="col-md-5">
@@ -139,7 +187,8 @@
                     <div class="footer-heading">
                         <h4>Contact Information</h4>
                     </div>
-                    <p>Send us an email or come to our office for more information about anything related to the club and
+                    <p>Send us an email or come to our office for more information about anything related to the club
+                        and
                         this website!</p>
                     <ul>
                         <li><span>Email:</span><a href="#">clarkuspoc@gmail.com</a></li>
@@ -150,8 +199,6 @@
         </div>
     </div>
 </footer>
-
-
 
 </body>
 </html>
