--- a/SPOC-Direct/public/html/forum_edit.html
+++ b/SPOC-Direct/public/html/forum_edit.html
@@ -133,16 +133,16 @@
                     <div class="row">
                         <div class="col-md-6">
                             <ul>
-                                <li><a href="/register"><i class="fa fa-stop"></i>Register</a></li>
-                                <li><a href="/login"><i class="fa fa-stop"></i>Login</a></li>
-                                <li><a href="/profile"><i class="fa fa-stop"></i>My Profile</a></li>
+                                <li><a href="/register"><i class="fa fa-angle-right"></i>Register</a></li>
+                                <li><a href="/login"><i class="fa fa-angle-right"></i>Login</a></li>
+                                <li><a href="/profile"><i class="fa fa-angle-right"></i>My Profile</a></li>
                             </ul>
                         </div>
                         <div class="col-md-6">
                             <ul>
-                                <li><a href="/forum"><i class="fa fa-stop"></i>Forum</a></li>
-                                <li><a href="#"><i class="fa fa-stop"></i>Events</a></li>
-                                <li><a href="/"><i class="fa fa-stop"></i>About Us</a></li>
+                                <li><a href="/forum"><i class="fa fa-angle-right"></i>Forum</a></li>
+                                <li><a href="#"><i class="fa fa-angle-right"></i>Events</a></li>
+                                <li><a href="/"><i class="fa fa-angle-right"></i>About Us</a></li>
                             </ul>
                         </div>
                     </div>
