--- a/SPOC-Direct/public/html/account.html
+++ b/SPOC-Direct/public/html/account.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="../js/account.js" defer></script>
     <meta charset="UTF-8">
-    <title>Register New Account</title>
-    <script src="../js/register.js" defer></script>
-
-
+    <title>Account</title>
 
     <!--    Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -17,30 +15,14 @@
     <!--    jQuery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-    <!--    Datepicker-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
-
-    <!--    fontawesome-->
-    <script src="https://kit.fontawesome.com/e5b5eed843.js" crossorigin="anonymous"></script>
-
-
-<!--    <link rel="stylesheet" href="../register/css/hero-slider.css">-->
-<!--    <link rel="stylesheet" href="../register/css/owl-carousel.css">-->
-
-
-    <!-- Unfortunately needed for the Navbar to work...   -->
-    <!-- But I like the navbar too much   -->
-    <!--    Navbar Css (needed or will not work)-->
     <link rel="stylesheet" href="../css/navCSS.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900" rel="stylesheet">
     <script src="../js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     <script src="../js/datepicker.js" defer></script>
     <script src="../js/plugins.js" defer></script>
     <script src="../js/main.js" defer></script>
-
-
 </head>
-<body>
+
 <div class="wrap" id="navtop">
     <header id="header">
         <div class="container">
@@ -76,41 +58,31 @@
     </header>
 </div>
 
-<div class="mb-3 container">
-    <form class="m-2 d-flex justify-content-center" id="regForm" action="/register" method="POST">
-        <div class="card col-sm-12 col-lg-6">
-            <h3 class="mx-2">Register New Account</h3>
-            <div class="col-10 mt-3 mx-2 form-group">
-                <label for="username" class="form-label">Username:</label>
-                <input type="text" class="form-control" name="username" id="username" placeholder="username">
-            </div>
-            <div class="col-10  mx-2 form-group">
-                <label for="password" class="form-label">Password:</label>
-                <input type="password" class="form-control" name="password" id="password" placeholder="password">
-            </div>
-            <div class="col-10  mx-2 form-group">
-                <label for="password" class="form-label">Confirm Password:</label>
-                <input type="password" class="form-control" name="confirm" id="confirm" placeholder="password">
-            </div>
-            <div class="col-10 mx-2 form-group">
-                <label for="email" class="form-label">Email:</label>
-                <input type="email" class="form-control" id="email" placeholder="email">
-            </div>
-            <div class="col-10  mb-4 mx-2 form-group">
-                <label for="avatar" class="form-label">User Avatar Image URL:</label>
-                <input type="text" class="form-control" name="avatar" id="avatar" placeholder="URL">
-            </div>
-            <div class="row mx-1">
-                <div style="color: red"><p id="error_msg"></p></div>
-                <div class="d-flex justify-content-between mb-2">
-                    <button type="submit" class="btn btn-primary">Register</button>
-                    <button type="button" class="btn btn-outline-danger" onclick=redr()>Cancel</button>
-                </div>
+<body class="container">
+
+<section id="header_section">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <div class="navbar-nav">
+                <a class="navbar-brand" href="/">Account Details:</a>
             </div>
         </div>
-    </form>
-</div>
+    </nav>
+</section>
 
-
+<section id="user_info" style="margin-top: 2%">
+    <div class="row">
+        <div class="col-lg-3">
+            <img id="profile_img" width="100%">
+        </div>
+        <div class="col-lg-9">
+            <h1 id="name"></h1>
+            <h3>Favorite Tags: <span id="acc_brand"></span></h3>
+            <h3>Favorite Archive Entries:</h3>
+            <ul id="car_list_personal" class="list-group">
+            </ul>
+        </div>
+    </div>
+</section>
 </body>
 </html>
