--- a/SPOC-Direct/public/html/forum.html
+++ b/SPOC-Direct/public/html/forum.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>Forum</title>
 
-    <script src="../js/forum.js" defer></script>
 
 
     <!--    Bootstrap-->
@@ -24,8 +23,8 @@
     <script src="https://kit.fontawesome.com/e5b5eed843.js" crossorigin="anonymous"></script>
 
 
-<!--        <link rel="stylesheet" href="../css/hero-slider.css">-->
-<!--        <link rel="stylesheet" href="../css/owl-carousel.css">-->
+    <!--    <link rel="stylesheet" href="../register/css/hero-slider.css">-->
+    <!--    <link rel="stylesheet" href="../register/css/owl-carousel.css">-->
 
 
     <!-- Unfortunately needed for the Navbar to work...   -->
@@ -37,6 +36,11 @@
     <script src="../js/datepicker.js" defer></script>
     <script src="../js/plugins.js" defer></script>
     <script src="../js/main.js" defer></script>
+
+
+
+
+
 
 
 </head>
@@ -57,7 +61,6 @@
                             <li><a href="/">Home</a></li>
                             <li><a href="#">Events</a></li>
                             <li><a href="/forum">Forum</a></li>
-<li><a href="/election">Election</a></li>
 
                             <li><a href="#">User</a>
                                 <!--   Change 'User' to username when logged in -->
@@ -76,71 +79,5 @@
         </div>
     </header>
 </div>
-
-<!--needs to be changed for authentication-->
-<button class="btn btn-info" onclick="window.location.href='/forum_edit'">New Forum Post</button>
-
-<section class="container">
-    <div class="row d-flex justify-content-center"></div>
-    <div class="col-lg-12">
-        <ul id="post_list" class="list-group">
-
-        </ul>
-    </div>
-</section>
-
-<footer class="footer mt-5">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-5">
-                <div class="about-veno">
-                    <div class="logo">
-                        <img src="/img/trueIcon.png" alt="Venue Logo">
-                    </div>
-                    <p>Science-Fiction People of Clark is a student run club at Clark Univeristy which appeals to all
-                        interested</p>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="useful-links">
-                    <div class="footer-heading">
-                        <h4>Useful Links</h4>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <ul>
-                                <li><a href="/register"><i class="fa fa-angle-right"></i>Register</a></li>
-                                <li><a href="/login"><i class="fa fa-angle-right"></i>Login</a></li>
-                                <li><a href="/profile"><i class="fa fa-angle-right"></i>My Profile</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-md-6">
-                            <ul>
-                                <li><a href="/forum"><i class="fa fa-angle-right"></i>Forum</a></li>
-                                <li><a href="#"><i class="fa fa-angle-right"></i>Events</a></li>
-                                <li><a href="/"><i class="fa fa-angle-right"></i>About Us</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="contact-info">
-                    <div class="footer-heading">
-                        <h4>Contact Information</h4>
-                    </div>
-                    <p>Send us an email or come to our office for more information about anything related to the club and
-                        this website!</p>
-                    <ul>
-                        <li><span>Email:</span><a href="#">clarkuspoc@gmail.com</a></li>
-                        <li><span>Address:</span><a href="#">950 Main St. Worcester, MA</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-</footer>
-
-
 </body>
 </html>
