--- a/SPOC-Direct/public/html/login.html
+++ b/SPOC-Direct/public/html/login.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Register New Account</title>
+    <title>Login Current Account</title>
+    <script src="../js/login.js" defer></script>
 
 
 
@@ -23,8 +24,8 @@
     <script src="https://kit.fontawesome.com/e5b5eed843.js" crossorigin="anonymous"></script>
 
 
-<!--    <link rel="stylesheet" href="../css/hero-slider.css">-->
-<!--    <link rel="stylesheet" href="../css/owl-carousel.css">-->
+<!--    <link rel="stylesheet" href="../register/css/hero-slider.css">-->
+<!--    <link rel="stylesheet" href="../register/css/owl-carousel.css">-->
 
 
     <!-- Unfortunately needed for the Navbar to work...   -->
@@ -36,7 +37,6 @@
     <script src="../js/datepicker.js" defer></script>
     <script src="../js/plugins.js" defer></script>
     <script src="../js/main.js" defer></script>
-
 
 </head>
 <body>
@@ -56,7 +56,6 @@
                             <li><a href="/">Home</a></li>
                             <li><a href="#">Events</a></li>
                             <li><a href="/forum">Forum</a></li>
-<li><a href="/election">Election</a></li>
 
                             <li><a href="#">User</a>
                                 <!--   Change 'User' to username when logged in -->
@@ -77,80 +76,27 @@
 </div>
 
 <div class="mb-3 container">
-    <form class="m-2 d-flex justify-content-center">
+    <form class="m-2 d-flex justify-content-center" action="/login" method="POST">
         <div class="card col-6">
             <h3 class="mx-2">Log In</h3>
             <div class="col-10 mt-3 mx-2">
                 <label for="username" class="form-label">Username:</label>
-                <input type="text" class="form-control" id="username" placeholder="username">
+                <input class="form-control" name="username" id="username" placeholder="username">
             </div>
             <div class="col-10 mb-4 mx-2">
                 <label for="password" class="form-label">Password:</label>
-                <input type="password" class="form-control" id="password" placeholder="password">
+                <input type="password" class="form-control" name="password" id="password" placeholder="password">
             </div>
             <div class="row mx-1">
+                <div style="color: red"><p id="error_msg"></p></div>
                 <div class="d-flex justify-content-between mb-2">
-                    <button class="btn btn-primary">Log in</button>
-                    <button class="btn btn-outline-primary" onclick="window.location.href='/register'">Register New Account</button>
+                    <button type="submit" class="btn btn-primary">Log in</button>
+                    <button class="btn register btn-outline-primary" onclick="Register()">Register New Account</button>
                 </div>
             </div>
         </div>
     </form>
 </div>
-
-
-<footer class="footer">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-5">
-                <div class="about-veno">
-                    <div class="logo">
-                        <img src="/img/trueIcon.png" alt="Venue Logo">
-                    </div>
-                    <p>Science-Fiction People of Clark is a student run club at Clark Univeristy which appeals to all
-                        interested</p>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="useful-links">
-                    <div class="footer-heading">
-                        <h4>Useful Links</h4>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <ul>
-                                <li><a href="/register"><i class="fa fa-angle-right"></i>Register</a></li>
-                                <li><a href="/login"><i class="fa fa-angle-right"></i>Login</a></li>
-                                <li><a href="/profile"><i class="fa fa-angle-right"></i>My Profile</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-md-6">
-                            <ul>
-                                <li><a href="/forum"><i class="fa fa-angle-right"></i>Forum</a></li>
-                                <li><a href="#"><i class="fa fa-angle-right"></i>Events</a></li>
-                                <li><a href="/"><i class="fa fa-angle-right"></i>About Us</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="contact-info">
-                    <div class="footer-heading">
-                        <h4>Contact Information</h4>
-                    </div>
-                    <p>Send us an email or come to our office for more information about anything related to the club and
-                        this website!</p>
-                    <ul>
-                        <li><span>Email:</span><a href="#">clarkuspoc@gmail.com</a></li>
-                        <li><span>Address:</span><a href="#">950 Main St. Worcester, MA</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-</footer>
-
 
 
 </body>
